Fixed align-items setting
on card rows for categorization page

--- a/style/_scss/_rows.scss
+++ b/style/_scss/_rows.scss
@@ -18,9 +18,6 @@
   justify-content: flex-end;
 }
 
-.row.flex-start {
-  justify-content: flex-start;
-}
 
 .row.space-between {
   justify-content: space-between;
@@ -32,4 +29,8 @@
 
 .row.align-end {
   align-items: flex-end;
+}
+
+.row.align-start {
+  align-items: flex-start;
 }
